--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html>
+ <head>
+  <meta charset="utf-8">
+  <title>Фотографии</title>
+  <style>
+   .thumb img  {
+        top: 383px;
+        left: 344px;
+        width: 100%;
+        height: auto;
+        background: transparent url('img/mario.png') 0% 0% no-repeat padding-box;
+        box-shadow: 0px 15px 15px #00000029;
+        border: 3px solid #27A7E7;
+        border-radius: 50px;
+        opacity: 1;
+   }
+  </style>
+ </head>
 <body>
-    <div id="main">
-        <ul>
-            <li><img src="Mario.png" ></li>
-            <li><img src="AlbertEinstein.png"></li>
-        </ul>
-    </div>
+    <p class="thumb">
+        <img src="Mario.png" alt="">
+        <img src="AlbertEinstein.png" alt="">
+    </p>
 </body>
 </html>
