--- a/index.html
+++ b/index.html
@@ -1,52 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            color: #F5F5F5
-            margin: 0;
-            font-family: 'SF Pro', sans-serif;
-        }
-
-        .image-container {
-            text-align: center;
-            margin-bottom: 20px;
-            padding: 10px; /* добавлен отступ вокруг картинки и текста */
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-            margin-bottom: 10px;
-            border: 3px solid #27A7E7;
-            border-radius: 50px;
-        }
-
-        p {
-            text-align: centre;
-            font: normal normal bold 40px/48px SF Pro;
-            letter-spacing: 0px;
-            color: #27A7E7;
-            opacity: 1;
-        }
-    </style>
-    <title>Telegram Web App</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="image-container">
-        <img src="Mario.png" alt="Mario">
-        <p>Марио</p>
-    </div>
-    <div class="image-container">
-        <img src="AlbertEinstein.png" alt="Albert">
-        <p>Альберт Энштейн</p>
-    </div>
-    <!-- Добавьте другие изображения с их названиями по аналогии -->
+  <div class="image-container">
+    <div class="rounded-image mario"></div>
+    <div class="image-title">Mario</div>
+  </div>
+  
+  <div class="image-container">
+    <div class="rounded-image albert"></div>
+    <div class="image-title">Albert</div>
+  </div>
+
 </body>
 </html>
