--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <div class="rounded-image albert"></div>
     <div class="image-title">Albert</div>
   </div>
-
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
 </html>
