--- a/index.html
+++ b/index.html
@@ -4,17 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      margin: 0;
+      background-color: var(--tg-theme-bg-color);
+    }
+  </style>
 </head>
 <body>
   <div class="image-container">
     <div class="rounded-image mario"></div>
     <div class="image-title">Mario</div>
   </div>
-  
+
   <div class="image-container">
     <div class="rounded-image albert"></div>
     <div class="image-title">Albert</div>
   </div>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
 </body>
 </html>
