--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <style>
+  <script>
+    let tg = window.Telegram.WebApp;
+    let character = document.getElementByClass("rounded-image");
 
-  </style>
+    tg.expand();
+
+    character.addEventListener("click", () => {
+      tg.close()
+    }
+  </script>
 </head>
 <body>
   <div class="image-container">
