--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     tg.expand();
 
     character.addEventListener("click", () => {
-      tg.close()
-    }
+      tg.close();
+    });
   </script>
 </head>
 <body>
