--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script>
     let tg = window.Telegram.WebApp;
-    let character = document.getElementByClass("rounded-image");
+    let character = document.getElementByClass("image-container");
 
     tg.expand();
 
