--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 </head>
 <body>
   <div class="image-container">
-    <div class="rounded-image mario" id="mario"></div>
+    <div class="rounded-image mario"></div>
     <div class="image-title">Mario</div>
   </div>
-
+  <button id="mario">Кнопка</button>
   <div class="image-container">
     <div class="rounded-image albert"></div>
     <div class="image-title">Albert</div>
