--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
     tg.expand();
 
-    character.addEventListener("click", () => {
+    $('.image-container').on('click', function() {
       tg.close();
-
     });
   </script>
 </head>
@@ -22,7 +21,7 @@
     <div class="rounded-image mario"></div>
     <div class="image-title">Mario</div>
   </div>
-  <button id="mario">Кнопка</button>
+  <button id="mario">Кнопка123</button>
   <div class="image-container">
     <div class="rounded-image albert"></div>
     <div class="image-title">Albert</div>
