--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 
     mario.addEventListener("click", () => {
       tg.close();
+      alert("11");
     });
   </script>
 </head>
 <body>
   <div class="image-container" id="mario">
     <div class="rounded-image mario"></div>
-    <div class="image-title">Mario</div>
+    <div class="image-title">Mario1</div>
   </div>
   <div class="image-container">
     <div class="rounded-image albert"></div>
